--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%22Js2HXa8z%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%22iH7N1lP2%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.824Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "c_user",
@@ -77,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "xs",
-        "value": "30%3AXMUHzYD3lZnMRA%3A2%3A1755173219%3A-1%3A-1",
+        "value": "12%3A-kcYJP6h4frQjw%3A2%3A1755208955%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWc_QzQi05y4pCwO5zCyDgEO5o9SB6KTIEjKEtDNqorwsbWzfKM.Bn_fCK..AAA.0.0.BoneR8.AWcIK0QiIqGWe7JCRMeSc1TRnz0",
+        "value": "0MmXGi5OoGPsKoWdq.AWcItAx9YE8xu6lXTK46R3105tnyFE7uPxZLvYUhbsoQ1Bk29nA.Bn_fCK..AAA.0.0.Bonl0D.AWcagseTrJPt8eorEhJVvAueUe8",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "fbl_st",
-        "value": "100735171%3BT%3A29252968",
+        "value": "100722684%3BT%3A29253482",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2893%3Btimestamp%3A1755178108",
+        "value": "v2%3Bclient_version%3A2893%3Btimestamp%3A1755208963",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T13:28:44.825Z",
-        "lastAccessed": "2025-08-14T13:28:44.825Z"
+        "creation": "2025-08-14T22:03:57.318Z",
+        "lastAccessed": "2025-08-14T22:03:57.318Z"
     }
 ]
