--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%22iH7N1lP2%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%22JIS0zsr5%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "pas",
@@ -68,8 +59,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "wd",
@@ -86,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "c_user",
@@ -95,43 +104,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "xs",
-        "value": "12%3A-kcYJP6h4frQjw%3A2%3A1755208955%3A-1%3A-1",
+        "value": "10%3ADvWWX5ctvSl43w%3A2%3A1755984867%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWcItAx9YE8xu6lXTK46R3105tnyFE7uPxZLvYUhbsoQ1Bk29nA.Bn_fCK..AAA.0.0.Bonl0D.AWcagseTrJPt8eorEhJVvAueUe8",
+        "value": "0MmXGi5OoGPsKoWdq.AWeksG_TGRpKONC5r3EwhUjw838l-5wmLfE6341SpE24VepAtLk.Bn_fCK..AAA.0.0.BoqjPq.AWdAz-flycs9HggvI69gj6SowGo",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "fbl_st",
-        "value": "100722684%3BT%3A29253482",
+        "value": "100736128%3BT%3A29266414",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2893%3Btimestamp%3A1755208963",
+        "value": "v2%3Bclient_version%3A2901%3Btimestamp%3A1755984874",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-14T22:03:57.318Z",
-        "lastAccessed": "2025-08-14T22:03:57.318Z"
+        "creation": "2025-08-23T21:34:44.539Z",
+        "lastAccessed": "2025-08-23T21:34:44.539Z"
     }
 ]
